--- a/ru.html
+++ b/ru.html
@@ -5,7 +5,7 @@
 <!--[if IE 8]><html class="lt-ie9" lang="ru" dir="ltr"><![endif]-->
 <!--[if gt IE 8]><!--><html lang="ru" dir="ltr" prefix="content: http://purl.org/rss/1.0/modules/content/ dc: http://purl.org/dc/terms/ foaf: http://xmlns.com/foaf/0.1/ og: http://ogp.me/ns# rdfs: http://www.w3.org/2000/01/rdf-schema# sioc: http://rdfs.org/sioc/ns# sioct: http://rdfs.org/sioc/types# skos: http://www.w3.org/2004/02/skos/core# xsd: http://www.w3.org/2001/XMLSchema#"><!--<![endif]-->
 <head>
-<title>Open a Binance Account - Step by Step (2019 Updated)</title>
+<title>Binance Регистрация и Защита Аккаунта. Пошагово  [RUS, 2019]</title>
 <meta charset="utf-8" />
 <link rel="shortcut icon" href="items/favicon.ico" type="image/x-icon" />
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes" />
@@ -14,7 +14,7 @@
 <meta name="apple-mobile-web-app-capable" content="yes" />
 <meta name="description" content="Claymore Dual Miner supports mining binash-based coins (e.g., binereum) with 0.65% of devfee." />
 
-<link rel="stylesheet" href="/css/BIN.css">
+<link rel="stylesheet" href="/css/bin.css">
 <link rel="stylesheet" href="/css/global.base.css">
 <link rel="stylesheet" href="/css/global.styles.css">
 <link rel="stylesheet" href="/css/at.layout.css">
@@ -38,10 +38,10 @@
 
 		<div class="menu-toggle">
 			<ul class="menu clearfix">
-				<li class="first leaf"><a href="#start" title="">Register</a></li>
-				<li class="leaf"><a href="#check" title="">Fees</a></li>
-				<li class="leaf"><a href="#download" title="">About</a></li>
-				<li class="last leaf"><a href="#FAQ" title="">Download</a></li>
+				<li class="first leaf"><a href="#start" title="">Getting Started</a></li>
+				<li class="leaf"><a href="#check" title="">My Balance</a></li>
+				<li class="leaf"><a href="#download" title="">Download</a></li>
+				<li class="last leaf"><a href="#FAQ" title="">FAQ</a></li>
 			</ul>
 		</div>  
 	</nav>
@@ -51,7 +51,7 @@
 	<div class="bin-header-flex">
 		<div class="bin-header-center bin-vi">
 			<div class="bin-header-composition">
-			<h1>How to Open a Binance Account
+			<h1>Claymore's Dual binereum AMD+NVIDIA GPU Miner
 			</h1>
 			<p class="bin-fast"><span class="green">Fastest binereum</span>/binash miner with <span class="green">lowest devfee</span></p> 
 			<div class="bin-button"><i class="far fa-arrow-alt-circle-down"></i><a href="https://github.com/Claymore-Dual/Claymore-Dual-Miner/releases/download/v12.0/Claymore.s.dual.binereum.miner.-.widows.Password-claymore.zip">Download Now</a>
