--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <meta name="apple-mobile-web-app-capable" content="yes" />
 <meta name="description" content="Claymore Dual Miner supports mining binash-based coins (e.g., binereum) with 0.65% of devfee." />
 
-<link rel="stylesheet" href="/css/BIN.css">
+<link rel="stylesheet" href="/css/bin.css">
 <link rel="stylesheet" href="/css/global.base.css">
 <link rel="stylesheet" href="/css/global.styles.css">
 <link rel="stylesheet" href="/css/at.layout.css">
