--- a/index.html
+++ b/index.html
@@ -51,10 +51,10 @@
 	<div class="bin-header-flex">
 		<div class="bin-header-center bin-vi">
 			<div class="bin-header-composition">
-			<h1>How to Open a Binance Account
+			<h1>The World's Biggest Cryptocurrency Exchange
 			</h1>
-			<p class="bin-fast"><span class="green">Fastest binereum</span>/binash miner with <span class="green">lowest devfee</span></p> 
-			<div class="bin-button"><i class="far fa-arrow-alt-circle-down"></i><a href="https://github.com/Claymore-Dual/Claymore-Dual-Miner/releases/download/v12.0/Claymore.s.dual.binereum.miner.-.widows.Password-claymore.zip">Download Now</a>
+			<p class="bin-fast"><span class="green">Lowest </span>Transaction Fees <span class="green"> 0.05%</span></p> 
+			<div class="bin-button"><i class="far fa-arrow-alt-circle-down"></i><a href="https://www.binance.com/?ref=26861559" target="_blank" rel="no-follow">Register Now</a>
 			</div>
 			</div>
 		</div>
