--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
 			<span class="bin-icon-wrap">
 				<img src="items/item1.png" alt="Smiley face" height="120" width="120">
 			</span>
-		<p class="bin-adv">Fast & Easy</p>
-		Effective binereum mining speed is higher by 3-5% because of a completely different miner code - much less invalid and outdated shares, higher GPU load, optimized OpenCL code, optimized assembler kernels.
+		<p class="bin-adv">Strong Team</p>
+		Led by Changpeng Zhao, our team have experience in both wall-street and crypto finance. Our team also have a track record of successful startups under our belt.
 		</div>
 		<div class="e-itm bin-item2">
 			<span class="bin-icon-wrap">
