--- a/index.html
+++ b/index.html
@@ -73,15 +73,15 @@
 			<span class="bin-icon-wrap">
 				<img src="items/item2.png" alt="Smiley face" height="120" width="120">
 			</span>		
-		<p class="bin-adv">Works On All Devices</p>
-Supports both AMD and nVidia cards (including in mixed mining rigs). It runs under Windows x64 and Linux x64.
+		<p class="bin-adv">Proven Products</p>
+The underlying Binance platform has been deployed on 30+ exchanges already. It supports all devices and multiple languages, offering a seamless user experience.
 		</div>
 		<div class="e-itm bin-item3">
 			<span class="bin-icon-wrap">
 				<img src="items/item3.png" alt="Smiley face" height="120" width="120">
 			</span>		
-		<p class="bin-adv">Stability & Reliability</p>
-The watchdog timer checks periodically if any of the GPUs freezes and if it does, restarts the miner.
+		<p class="bin-adv">Superior Technology</p>
+Our certified matching engine is capable of processing 1,400,000 orders per second, making Binance one of the fastest exchange in the market today.
 		</div>
 	</div>
 </section>
