--- a/index.html
+++ b/index.html
@@ -93,11 +93,11 @@ Our certified matching engine is capable of processing 1,400,000 orders per seco
 </section>
 <section class="bin-start">
 	<div class="bin-vi2">
-		<div class="bin-title"><a id="start">Getting Started</a></div>
-			<p class="bin-st">Step 1: Download the miner</p>
-		<div class="bin-row">Unpack the archive anywhere on your computer.
-		<br>
-		In the folder that contains the miner, you should create a file with .bat extension. You can do this in any text editor (for example, Notepad). When you save the file, it’s important to choose ‘All Files’ as a file type, not ‘txt’. Otherwise, you’ll have .bat.txt at the end of the file name, and miner won’t be able to open this file. Your bat file (let’s say it’s called test.bat) should contain the following text (Step 2):
+		<div class="bin-title"><a id="start">Register</a></div>
+			<p class="bin-st">Step 1: Go to Binance’s registration page</p>
+		<div class="bin-row">
+		Enter the necessary information. It’s good to have a long and arbitrary password to better secure your account. Verify yourself and click on “Register” to proceed and you’ll receive a confirmation email.		<br>
+Attention! Always use an email address which you know is secure and that you check regularly. When creating a password, use a mix of numbers, symbols, upper and lower-case letters.
 		</div>
 			<p class="bin-attention">Attention! For security reasons, Windows may stop you from opening the bat file. In this case, you should permit it to open in the pop-up window.</p>
 			<p class="bin-st">Step 2: Review a batch file for starting Claymore Dual Miner</p>
