--- a/index.html
+++ b/index.html
@@ -99,15 +99,12 @@ Our certified matching engine is capable of processing 1,400,000 orders per seco
 		Enter the necessary information. It’s good to have a long and arbitrary password to better secure your account. Verify yourself and click on “Register” to proceed and you’ll receive a confirmation email.		<br>
 Attention! Always use an email address which you know is secure and that you check regularly. When creating a password, use a mix of numbers, symbols, upper and lower-case letters.
 		</div>
-			<p class="bin-attention">Attention! For security reasons, Windows may stop you from opening the bat file. In this case, you should permit it to open in the pop-up window.</p>
-			<p class="bin-st">Step 2: Review a batch file for starting Claymore Dual Miner</p>
+
+			<p class="bin-st">Step 2: Secure your account</p>
 		<div class="bin-row">
-<pre><code><span class="nev2">setx GPU_FORCE_64BIT_PTR 0
-setx GPU_MAX_HEAP_SIZE 100
-setx GPU_USE_SYNC_OBJECTS 1
-setx GPU_MAX_ALLOC_PERCENT 100
-setx GPU_SINGLE_ALLOC_PERCENT 100</span>
-binDcrMiner64.exe -epool eu1.binermine.org:4444 -eworker <span class="bin-grn">YOUR_RIG_NAME</span> -ewal <span class="bin-grn">YOUR_WALLET ADDRESS</span> -epsw x</code></pre>
+When your login for the first time, you’ll be asked if you want to set up 2FA. You DO want to set up 2FA, it’s very important! If you choose Skip for now you’ll regret it later!<br>
+2FA is two-factor authentication. It’s a security feature which gives users an extra form of password. When using 2FA, users <span class="bin-grn">enter their normal password and a second code</span> which can be sent to a mobile device by SMS or created by the Google Authenticator app.	
+		
 		</div>
 		<p class="bin-st">Step 3: Configure the miner with your settings</p>
 		<div class="bin-row"><span class="bin-grn">WALLET_ADDRESS</span> - enter <span class="bin-grn">YOUR</span> binereum wallet address (this is how Claymore Miner knows where to deposit your biner)
