--- a/index.html
+++ b/index.html
@@ -106,10 +106,10 @@ When your login for the first time, you’ll be asked if you want to set up 2FA.
 2FA is two-factor authentication. It’s a security feature which gives users an extra form of password. When using 2FA, users <span class="bin-grn">enter their normal password and a second code</span> which can be sent to a mobile device by SMS or created by the Google Authenticator app.	
 		
 		</div>
-		<p class="bin-st">Step 3: Configure the miner with your settings</p>
-		<div class="bin-row"><span class="bin-grn">WALLET_ADDRESS</span> - enter <span class="bin-grn">YOUR</span> binereum wallet address (this is how Claymore Miner knows where to deposit your biner)
+		<p class="bin-st">Step 3: Step 4: Deposit funds</p>
+		<div class="bin-row">In the top-right-hand corner of the Binance homepage, find a tab labeled "Funds." Hover over that and click on "Deposit/Withdrawals."<br>
+Search for Crypto or USDT, and then press the "Deposit" tab.
 
-		<span class="bin-grn">RIG_NAME</span> – you can choose any name (like test), but don’t exaggerate: it should be 32 symbols max, contain only letters and numbers (no special characters like $%»*;@).
 		</div>
 		<p class="bin-st">Step 4: Start mining</p>
 		<div class="bin-row">Double click <span class="bin-grn">your Bat file</span> to start the miner. The miner will start, run the setx commands to set those environment variables, initialize each of your GPU’s, build the DAG file on each of your GPU’s and start hashing away. Let it run for about 20 seconds and then click “s” to display your Hashing speed.
