--- a/index.html
+++ b/index.html
@@ -111,8 +111,9 @@ When your login for the first time, you’ll be asked if you want to set up 2FA.
 Search for Crypto or USDT, and then press the "Deposit" tab.
 
 		</div>
-		<p class="bin-st">Step 4: Start mining</p>
-		<div class="bin-row">Double click <span class="bin-grn">your Bat file</span> to start the miner. The miner will start, run the setx commands to set those environment variables, initialize each of your GPU’s, build the DAG file on each of your GPU’s and start hashing away. Let it run for about 20 seconds and then click “s” to display your Hashing speed.
+		<p class="bin-st">Step 4: Start trading</p>
+		<div class="bin-row">Enjoy trading on Binance and good luck!<br>
+		It’s very very easy to make mad money when the market is on an upswing, less so when cryptocurrency enters a bear market. Talented traders, and those with information, can make money on the way up and on the way down.<br>
 
 		If you’ve followed the steps above you should see this screen.
 		</div>
