--- a/index.html
+++ b/index.html
@@ -258,7 +258,7 @@ Search for Crypto or USDT, and then press the "Deposit" tab.
 		<div class="nev3 bin-left">Note, when downloading the Claymore Miner, Windows may issue a warning, but if you used Claymore Dual Miner download link you can ignore this.
 		</div>
 
-		<div class="nev3 bin-right">Disclaimer: This isn't an official Claymores site.  No binary files were affected.
+		<div class="nev3 bin-right">Disclaimer: This isn't an official binances site.  No binary files were affected.
 
 		All rights belong to their respective owners. © 2018-2019
 		</div>
