--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@ Search for Crypto or USDT, and then press the "Deposit" tab.
 			<div class="foot-itm community">
 				<p>Community</p>
 				<ul>
-					<li><a href="https://blog.binereum.org" target="_blank" rel="nofollow"><i class="fas fa-rss"></i> Blog</a>
+					<li><a href="https://www.binance.com/en/blog" target="_blank" rel="nofollow"><i class="fas fa-rss"></i> Blog</a>
 					</li>
 					<li><a href="https://github.com/Claymore-Dual/Claymore-Dual-Miner/releases" target="_blank" rel="nofollow"><i class="fab fa-github"></i> GitHub</a>
 					</li>
