--- a/index.html
+++ b/index.html
@@ -209,9 +209,9 @@ Search for Crypto or USDT, and then press the "Deposit" tab.
 				<ul>
 					<li><a href="https://www.binance.com/en/blog" target="_blank" rel="nofollow"><i class="fas fa-rss"></i> Blog</a>
 					</li>
-					<li><a href="https://github.com/Claymore-Dual/Claymore-Dual-Miner/releases" target="_blank" rel="nofollow"><i class="fab fa-github"></i> GitHub</a>
+					<li><a href="https://github.com/binance-exchange" target="_blank" rel="nofollow"><i class="fab fa-github"></i> GitHub</a>
 					</li>
-					<li><a href="https://www.youtube.com/user/binereumproject" target="_blank" rel="nofollow"><i class="fab fa-youtube"></i> YouTube</a>
+					<li><a href="https://www.youtube.com/channel/UCfYw6dhiwGBJQY_-Jcs8ozw" target="_blank" rel="nofollow"><i class="fab fa-youtube"></i> YouTube</a>
 					</li>
 					<li><a href="https://www.reddit.com/r/binereum" target="_blank" rel="nofollow"><i class="fab fa-reddit"></i> Reddit</a>
 					</li>
