--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@ Search for Crypto or USDT, and then press the "Deposit" tab.
 					</li>
 					<li><a href="https://www.youtube.com/channel/UCfYw6dhiwGBJQY_-Jcs8ozw" target="_blank" rel="nofollow"><i class="fab fa-youtube"></i> YouTube</a>
 					</li>
-					<li><a href="https://www.reddit.com/r/binereum" target="_blank" rel="nofollow"><i class="fab fa-reddit"></i> Reddit</a>
+					<li><a href="https://www.reddit.com/r/binance/" target="_blank" rel="nofollow"><i class="fab fa-reddit"></i> Reddit</a>
 					</li>
 					<li><a href="https://gitter.im/orgs/binereum/rooms" target="_blank" rel="nofollow"><i class="fab fa-gitter"></i> Gitter</a>
 					</li>
@@ -223,13 +223,13 @@ Search for Crypto or USDT, and then press the "Deposit" tab.
 					
 		<div class="foot-itm community">
 			<ul>
-				<li><a href="https://twitter.com/binereum" target="_blank" rel="nofollow"><i class="fab fa-twitter"></i> Twitter</a>
+				<li><a href="https://twitter.com/binance" target="_blank" rel="nofollow"><i class="fab fa-twitter"></i> Twitter</a>
 				</li>
-				<li><a href="https://binereum.stackexchange.com" target="_blank" rel="nofollow"><i class="fab fa-stack-exchange"></i> Stack Exchange</a>
+				<li><a href="https://bitcoin.stackexchange.com/questions/tagged/binance" target="_blank" rel="nofollow"><i class="fab fa-stack-exchange"></i> Stack Exchange</a>
 				</li>
-				<li><a href="https://www.facebook.com/binereumproject" target="_blank" rel="nofollow"><i class="fab fa-facebook"></i> Facebook                </a>
+				<li><a href="https://www.facebook.com/binanceexchange/" target="_blank" rel="nofollow"><i class="fab fa-facebook"></i> Facebook                </a>
 				</li>
-				<li><a href="https://binereum.meetup.com" target="_blank" rel="nofollow"><i class="fab fa-meetup"></i> Meetups</a>
+				<li><a href="https://www.facebook.com/binanceexchange/posts/first-up-in-our-global-meetups772018berlin-chill-grillcome-join-ushttpswwwfacebo/648836268784068/" target="_blank" rel="nofollow"><i class="fab fa-meetup"></i> Meetups</a>
 				</li>
 			</ul>
 		</div>
