--- a/index.html
+++ b/index.html
@@ -238,11 +238,11 @@ Search for Crypto or USDT, and then press the "Deposit" tab.
 			<p>Developer Resources</p>
 			<ul>
 				<li>What is biner? <a href="#FAQ">Read our FAQ</a></li>
-				<li>Browse our source code on <a href="https://github.com/Claymore-Dual/Claymore-Dual-Miner/releases" target="_blank" rel="nofollow">GitHub</a></li>
-				<li>Read the <a href="http://www.bindocs.org/" target="_blank" rel="nofollow">documentation</a>
+				<li>Browse our source code on <a href="https://github.com/binance-exchange" target="_blank" rel="nofollow">GitHub</a></li>
+				<li>Read the <a href="https://github.com/binance-exchange/binance-official-api-docs" target="_blank" rel="nofollow">documentation</a>
 		or <a href="https://github.com/binereum/wiki/wiki" target="_blank" rel="nofollow">wiki</a></li>
 		<li>Learn <a href="https://solidity.readthedocs.org/" target="_blank" rel="nofollow">Solidity</a></li>
-		<li>See the latest <a href="https://binstats.net" target="_blank" rel="nofollow">data and network stats</a>
+		<li>See the latest <a href="https://etherscan.io/token/0xB8c77482e45F1F44dE1745F52C74426C631bDD52" target="_blank" rel="nofollow">data and network stats</a>
 		</li>
 		<li>Download our <a href="https://www.binereum.org/assets" rel="nofollow">logo assets </a></li>
 		<li>Want to write about binereum? <a href="mailto:press@binereum.org">Press inquiries</a>
