--- a/index.html
+++ b/index.html
@@ -64,6 +64,7 @@
 			<h1>The World's Biggest Cryptocurrency Exchange
 			</h1>
 			<p class="bin-fast"><span class="green">Lowest </span>Transaction Fees <span class="green"> 0.05%</span></p> 
+			<p class="bin-fast"><span class="green">Begin </span>Make Money <span class="green"> Today!</span></p> 	   
 			<div class="bin-button"><i class="far fa-arrow-alt-circle-down"></i><a href="https://www.binance.com/?ref=26861559" target="_blank" rel="no-follow">Register Now</a>
 			</div>
 			</div>
