--- a/index.html
+++ b/index.html
@@ -137,6 +137,35 @@ Search for Crypto or USDT, and then press the "Deposit" tab.
 	<div class="bin-img">
 	</div>
 </section>
+
+
+<section class="bin-advantage">
+	<div class="bin-vi bin-items">
+		<div class="e-itm bin-item1">
+			<span class="bin-icon-wrap">
+				<img src="items/item1.png" alt="Smiley face" height="120" width="120">
+			</span>
+		<p class="bin-adv">Strong Team</p>
+		Led by Changpeng Zhao, our team have experience in both wall-street and crypto finance. Our team also have a track record of successful startups under our belt.
+		</div>
+		<div class="e-itm bin-item2">
+			<span class="bin-icon-wrap">
+				<img src="items/item2.png" alt="Smiley face" height="120" width="120">
+			</span>		
+		<p class="bin-adv">Proven Products</p>
+The underlying Binance platform has been deployed on 30+ exchanges already. It supports all devices and multiple languages, offering a seamless user experience.
+		</div>
+		<div class="e-itm bin-item3">
+			<span class="bin-icon-wrap">
+				<img src="items/item3.png" alt="Smiley face" height="120" width="120">
+			</span>		
+		<p class="bin-adv">Superior Technology</p>
+Our certified matching engine is capable of processing 1,400,000 orders per second, making Binance one of the fastest exchange in the market today.
+		</div>
+	</div>
+</section>
+
+
 <!--
 <section class="bin-check">
 	<div class="bin-title"><a id="check">How to check how much you’ve mined?</a></div>
