--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 		<div class="menu-toggle">
 			<ul class="menu clearfix">
 				<li class="first leaf"><a href="#start" title="">Register</a></li>
-				<li class="leaf"><a href="#check" title="">Fees</a></li>
+				<li class="leaf"><a href="#fees" title="">Fees</a></li>
 				<li class="leaf"><a href="#download" title="">About</a></li>
 				<li class="last leaf"><a href="#FAQ" title="">Download</a></li>
 			</ul>
@@ -140,6 +140,7 @@ Search for Crypto or USDT, and then press the "Deposit" tab.
 
 
 <section class="bin-advantage">
+<div class="bin-title"><a id="fees">Fees</a></div>
 	<div class="bin-vi bin-items">
 		<div class="e-itm bin-item1">
 			<span class="bin-icon-wrap">
