--- a/index.html
+++ b/index.html
@@ -141,29 +141,12 @@ Search for Crypto or USDT, and then press the "Deposit" tab.
 
 <section class="bin-advantage">
 <div class="bin-title"><a id="fees">Fees</a></div>
-	<div class="bin-vi bin-items">
-		<div class="e-itm bin-item1">
-			<span class="bin-icon-wrap">
-				<img src="items/item1.png" alt="Smiley face" height="120" width="120">
-			</span>
-		<p class="bin-adv">Strong Team</p>
-		Led by Changpeng Zhao, our team have experience in both wall-street and crypto finance. Our team also have a track record of successful startups under our belt.
-		</div>
-		<div class="e-itm bin-item2">
-			<span class="bin-icon-wrap">
-				<img src="items/item2.png" alt="Smiley face" height="120" width="120">
-			</span>		
-		<p class="bin-adv">Proven Products</p>
-The underlying Binance platform has been deployed on 30+ exchanges already. It supports all devices and multiple languages, offering a seamless user experience.
-		</div>
-		<div class="e-itm bin-item3">
-			<span class="bin-icon-wrap">
-				<img src="items/item3.png" alt="Smiley face" height="120" width="120">
-			</span>		
-		<p class="bin-adv">Superior Technology</p>
-Our certified matching engine is capable of processing 1,400,000 orders per second, making Binance one of the fastest exchange in the market today.
-		</div>
-	</div>
+Deposit fees – zero
+Binance charges no fee to deposit any cryptoasset. Binance offers trading pairs with BTC, ETH, and USDT, but not fiat. So you’ll first need to use an exchange like Coinbase to swap your fiat for crypto. Then you can deposit your crypto on Binance for free.
+
+Trading fees – percentage of trade amount that you can reduce in two ways
+Once you’ve deposited some crypto on Binance, you’re ready to trade. But make sure you pay attention to the trading fees. As is the case with most centralized exchanges, Binance takes a percentage of each trade you make. The amount of that percentage depends on two things – (1) whether you hold BNB token, and how much you hold and (2) the amount of your 30-day trading volume.
+
 </section>
 
 
