--- a/index.html
+++ b/index.html
@@ -143,10 +143,10 @@ Search for Crypto or USDT, and then press the "Deposit" tab.
 <div class="bin-title"><a id="fees">Fees</a></div>
 <div class="bin-vi2">
 <h2>Deposit fees – zero</h2>
-Binance charges no fee to deposit any cryptoasset. Binance offers trading pairs with BTC, ETH, and USDT, but not fiat. So you’ll first need to use an exchange like Coinbase to swap your fiat for crypto. Then you can deposit your crypto on Binance for free.
+<p>Binance charges no fee to deposit any cryptoasset. Binance offers trading pairs with BTC, ETH, and USDT, but not fiat. So you’ll first need to use an exchange like Coinbase to swap your fiat for crypto. Then you can deposit your crypto on Binance for free.</p>
 <h2>Trading fees</h2>
-Trading fees – percentage of trade amount that you can reduce in two ways
-Once you’ve deposited some crypto on Binance, you’re ready to trade. But make sure you pay attention to the trading fees. As is the case with most centralized exchanges, Binance takes a percentage of each trade you make. The amount of that percentage depends on two things – (1) whether you hold BNB token, and how much you hold and (2) the amount of your 30-day trading volume.
+<p>Trading fees – percentage of trade amount that you can reduce in two ways
+Once you’ve deposited some crypto on Binance, you’re ready to trade. But make sure you pay attention to the trading fees. As is the case with most centralized exchanges, Binance takes a percentage of each trade you make. The amount of that percentage depends on two things – (1) whether you hold BNB token, and how much you hold and (2) the amount of your 30-day trading volume.</p>
 	</div>
 </section>
 
