--- a/index.html
+++ b/index.html
@@ -147,6 +147,116 @@ Search for Crypto or USDT, and then press the "Deposit" tab.
 <h2>Trading fees</h2>
 <p>Trading fees – percentage of trade amount that you can reduce in two ways
 Once you’ve deposited some crypto on Binance, you’re ready to trade. But make sure you pay attention to the trading fees. As is the case with most centralized exchanges, Binance takes a percentage of each trade you make. The amount of that percentage depends on two things – (1) whether you hold BNB token, and how much you hold and (2) the amount of your 30-day trading volume.</p>
+ <table class="responsive-table mar">
+    <caption>Fees</caption>
+	<tbody>
+		<tr>
+			<td>
+			<p>Level</p>
+			</td>
+			<td>30d Trade Volume(BTC)</td>
+			<td>&amp;</td>
+			<td>BNB holdings</td>
+			<td>Maker</td>
+			<td>Taker</td>
+			<td>Maker</td>
+			<td>Taker</td>
+		</tr>
+		<tr>
+			<td>General</td>
+			<td>&lt; 100 BTC</td>
+			<td>or</td>
+			<td>≥ 0 BNB</td>
+			<td>0.1000%</td>
+			<td>0.1000%</td>
+			<td>0.0750%</td>
+			<td>0.0750%</td>
+		</tr>
+		<tr>
+			<td>VIP 1</td>
+			<td>≥ 100 BTC</td>
+			<td>&amp;</td>
+			<td>≥ 50 BNB</td>
+			<td>0.0900%</td>
+			<td>0.1000%</td>
+			<td>0.0675%</td>
+			<td>0.0750%</td>
+		</tr>
+		<tr>
+			<td>VIP 2</td>
+			<td>≥ 500 BTC</td>
+			<td>&amp;</td>
+			<td>≥ 200 BNB</td>
+			<td>0.0800%</td>
+			<td>0.1000%</td>
+			<td>0.0600%</td>
+			<td>0.0750%</td>
+		</tr>
+		<tr>
+			<td>VIP 3</td>
+			<td>≥ 4500 BTC</td>
+			<td>&amp;</td>
+			<td>≥ 1000 BNB</td>
+			<td>0.0700%</td>
+			<td>0.0900%</td>
+			<td>0.0525%</td>
+			<td>0.0675%</td>
+		</tr>
+		<tr>
+			<td>VIP 4</td>
+			<td>≥ 10000 BTC</td>
+			<td>&amp;</td>
+			<td>≥ 2000 BNB</td>
+			<td>0.0600%</td>
+			<td>0.0800%</td>
+			<td>0.0450%</td>
+			<td>0.0600%</td>
+		</tr>
+		<tr>
+			<td>VIP 5</td>
+			<td>≥ 20000 BTC</td>
+			<td>&amp;</td>
+			<td>≥ 3500 BNB</td>
+			<td>0.0500%</td>
+			<td>0.0700%</td>
+			<td>0.0375%</td>
+			<td>0.0525%</td>
+		</tr>
+		<tr>
+			<td>VIP 6</td>
+			<td>≥ 40000 BTC</td>
+			<td>&amp;</td>
+			<td>≥ 6000 BNB</td>
+			<td>0.0400%</td>
+			<td>0.0600%</td>
+			<td>0.0300%</td>
+			<td>0.0450%</td>
+		</tr>
+		<tr>
+			<td>VIP 7</td>
+			<td>≥ 80000 BTC</td>
+			<td>&amp;</td>
+			<td>≥ 9000 BNB</td>
+			<td>0.0300%</td>
+			<td>0.0500%</td>
+			<td>0.0225%</td>
+			<td>0.0375%</td>
+		</tr>
+		<tr>
+			<td>VIP 8</td>
+			<td>≥ 150000 BTC</td>
+			<td>&amp;</td>
+			<td>≥ 11000 BNB</td>
+			<td>0.0200%</td>
+			<td>0.0400%</td>
+			<td>0.0150%</td>
+			<td>0.0300%</td>
+		</tr>
+	</tbody>
+</table>
+
+
+
 	</div>
 </section>
 
