--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@ Search for Crypto or USDT, and then press the "Deposit" tab.
 <p>Trading fees – percentage of trade amount that you can reduce in two ways
 Once you’ve deposited some crypto on Binance, you’re ready to trade. But make sure you pay attention to the trading fees. As is the case with most centralized exchanges, Binance takes a percentage of each trade you make. The amount of that percentage depends on two things – (1) whether you hold BNB token, and how much you hold and (2) the amount of your 30-day trading volume.</p>
  <table class="responsive-table mar">
-    <caption>Fees</caption>
+    <caption>Fee Structure</caption>
 	<tbody>
 		<tr>
 			<td>
