--- a/index.html
+++ b/index.html
@@ -149,19 +149,19 @@ Search for Crypto or USDT, and then press the "Deposit" tab.
 Once you’ve deposited some crypto on Binance, you’re ready to trade. But make sure you pay attention to the trading fees. As is the case with most centralized exchanges, Binance takes a percentage of each trade you make. The amount of that percentage depends on two things – (1) whether you hold BNB token, and how much you hold and (2) the amount of your 30-day trading volume.</p>
  <table class="responsive-table mar">
     <caption>Fee Structure</caption>
-	<tbody>
-		<tr>
-			<td>
-			<p>Level</p>
-			</td>
-			<td>30d Trade Volume(BTC)</td>
-			<td>&amp;</td>
-			<td>BNB holdings</td>
-			<td>Maker</td>
-			<td>Taker</td>
-			<td>Maker</td>
-			<td>Taker</td>
+    <thead>
+      <tr>
+			<th scope="col">Level</th>
+			<th scope="col">30d Trade Volume(BTC)</th>
+			<th scope="col">&amp;</th>
+			<th scope="col">BNB holdings</th>
+			<th scope="col">>Maker</th>
+			<th scope="col">Taker</th>
+			<th scope="col">Maker</th>
+			<th scope="col">Taker</th>
 		</tr>
+    </thead>		
+	<tbody>		
 		<tr>
 			<td>General</td>
 			<td>&lt; 100 BTC</td>
