--- a/index.html
+++ b/index.html
@@ -145,8 +145,12 @@ Search for Crypto or USDT, and then press the "Deposit" tab.
 <h2>Deposit fees – zero</h2>
 <p>Binance charges no fee to deposit any cryptoasset. Binance offers trading pairs with BTC, ETH, and USDT, but not fiat. So you’ll first need to use an exchange like Coinbase to swap your fiat for crypto. Then you can deposit your crypto on Binance for free.</p>
 <h2>Trading fees</h2>
+Fees -  0.1%<br>
 <p>Trading fees – percentage of trade amount that you can reduce in two ways
 Once you’ve deposited some crypto on Binance, you’re ready to trade. But make sure you pay attention to the trading fees. As is the case with most centralized exchanges, Binance takes a percentage of each trade you make. The amount of that percentage depends on two things – (1) whether you hold BNB token, and how much you hold and (2) the amount of your 30-day trading volume.</p>
+<p>If you are not using BNB (Binance Coin) to pay your trading fees, each trade will carry a standard fee of 0.1%.
+Using BNB for transaction fees applies a discount to your trading fee. By default, if you hold BNB in your account, your trading fees will be automatically subtracted from your BNB balance. (See: Using BNB for Fees)
+For other options to lower fees (such as maker/taker/volume discounts), or to view your account's trading fee, please check our Fee Schedule.</p>
 	</div>
 <div class="bin-vi2">
 <table class="responsive-table mar">
