--- a/index.html
+++ b/index.html
@@ -149,8 +149,7 @@ Fees -  0.1%<br>
 <p>Trading fees – percentage of trade amount that you can reduce in two ways
 Once you’ve deposited some crypto on Binance, you’re ready to trade. But make sure you pay attention to the trading fees. As is the case with most centralized exchanges, Binance takes a percentage of each trade you make. The amount of that percentage depends on two things – (1) whether you hold BNB token, and how much you hold and (2) the amount of your 30-day trading volume.</p>
 <p>If you are not using BNB (Binance Coin) to pay your trading fees, each trade will carry a standard fee of 0.1%.
-Using BNB for transaction fees applies a discount to your trading fee. By default, if you hold BNB in your account, your trading fees will be automatically subtracted from your BNB balance. (See: Using BNB for Fees)
-For other options to lower fees (such as maker/taker/volume discounts), or to view your account's trading fee, please check our Fee Schedule.</p>
+Using BNB for transaction fees applies a discount to your trading fee. By default, if you hold BNB in your account, your trading fees will be automatically subtracted from your BNB balance. </p>
 	</div>
 <div class="bin-vi2">
 <table class="responsive-table mar">
