--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 			<ul class="menu clearfix">
 				<li class="first leaf"><a href="#start" title="">Register</a></li>
 				<li class="leaf"><a href="#fees" title="">Fees</a></li>
-				<li class="leaf"><a href="#download" title="">About</a></li>
+				<li class="leaf"><a href="#about" title="">About</a></li>
 				<li class="last leaf"><a href="#FAQ" title="">Download</a></li>
 			</ul>
 		</div>  
@@ -298,15 +298,16 @@ Using BNB for transaction fees applies a discount to your trading fee. By defaul
 </div>
 </section>
 -->
-<!--
+
+
 <section class="bin-comm">
 	<div class="bin-vi2">
-<code>-epool</code>  binereum pool address. Only Stratum protocol is supported for pools. Miner supports all pools that are compatible with Dwarfpool proxy and accept binereum wallet address directly.
 	
+
 	
 	</div>
 </section>
--->
+
 <!--
 <section class="bin-faq">
 <div class="bin-title"><a id="FAQ">FAQ</a></div>
