--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@ When your login for the first time, you’ll be asked if you want to set up 2FA.
 2FA is two-factor authentication. It’s a security feature which gives users an extra form of password. When using 2FA, users <span class="bin-grn">enter their normal password and a second code</span> which can be sent to a mobile device by SMS or created by the Google Authenticator app.	
 		
 		</div>
-		<p class="bin-st">Step 3: Step 4: Deposit funds</p>
+		<p class="bin-st">Step 3: Deposit funds</p>
 		<div class="bin-row">In the top-right-hand corner of the Binance homepage, find a tab labeled "Funds." Hover over that and click on "Deposit/Withdrawals."<br>
 Search for Crypto or USDT, and then press the "Deposit" tab.
 
@@ -302,7 +302,7 @@ Using BNB for transaction fees applies a discount to your trading fee. By defaul
 
 <section class="bin-comm">
 	<div class="bin-vi2">
-	
+<div class="bin-title"><a id="about">About Binance</a></div>	
 
 	
 	</div>
