--- a/index.html
+++ b/index.html
@@ -303,8 +303,10 @@ Using BNB for transaction fees applies a discount to your trading fee. By defaul
 <section class="bin-comm">
 	<div class="bin-vi2">
 <div class="bin-title"><a id="about">About Binance</a></div>	
-
+	<div class="bin-vi3">
+Binance is a popular cryptocurrency exchange which was started in China but recently moved their headquarters to the crypto-friendly Island of Malta in the EU. 
 	
+	</div>
 	</div>
 </section>
 
