--- a/index.html
+++ b/index.html
@@ -307,6 +307,8 @@ Using BNB for transaction fees applies a discount to your trading fee. By defaul
 Binance is a popular cryptocurrency exchange which was started in China but recently moved their headquarters to the crypto-friendly Island of Malta in the EU. 
 	
 	</div>
+	
+<div class="bin-team"></div>
 	</div>
 </section>
 
