--- a/index.html
+++ b/index.html
@@ -300,7 +300,7 @@ Using BNB for transaction fees applies a discount to your trading fee. By defaul
 -->
 
 
-<section class="bin-comm">
+<section class="bin-faq">
 	<div class="bin-vi2">
 <div class="bin-title"><a id="about">About Binance</a></div>	
 	<div class="bin-vi3">
