--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@ Binance is a popular cryptocurrency exchange which was started in China but rece
 <section class="bin-faq">
 	<div class="bin-vi2">	
 	<div class="bin-vi3">
-Binance Jersey aims to build a secure, transparent and open blockchain community for users around the world. The Company will put our community interests first, sustain a 1,400,000 orders-per-second matching engine, provide 24/7 customer service, and count on strong technical support from our global team. Binance Jersey is building together, with our users, a world-class blockchain community.	
+Binance  aims to build a secure, transparent and open blockchain community for users around the world. The Company will put our community interests first, sustain a 1,400,000 orders-per-second matching engine, provide 24/7 customer service, and count on strong technical support from our global team. Binance  is building together, with our users, a world-class blockchain community.	
 	
 	</div>
 	</div>
