--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@ Using BNB for transaction fees applies a discount to your trading fee. By defaul
 	<div class="bin-vi2">
 <div class="bin-title"><a id="about">About Binance</a></div>	
 	<div class="bin-vi3">
-	Binance  aims to build a secure, transparent and open blockchain community for users around the world. The Company will put our community interests first, sustain a 1,400,000 orders-per-second matching engine, provide 24/7 customer service, and count on strong technical support from our global team. Binance  is building together, with our users, a world-class blockchain community.
+	Binance  aims to build a secure, transparent and open blockchain community for users around the world. The Company put our community interests first, sustain a 1,400,000 orders-per-second matching engine, provide 24/7 customer service, and count on strong technical support from our global team. Binance  is building together, with our users, a world-class blockchain community.
 
 	
 	</div>
