--- a/index.html
+++ b/index.html
@@ -388,7 +388,7 @@ Binance is a popular cryptocurrency exchange which was started in China but rece
 		<li>Learn <a href="https://solidity.readthedocs.org/" target="_blank" rel="nofollow">Solidity</a></li>
 		<li>See the latest <a href="https://etherscan.io/token/0xB8c77482e45F1F44dE1745F52C74426C631bDD52" target="_blank" rel="nofollow">data and network stats</a>
 		</li>
-		<li>Download our <a href="https://www.binereum.org/assets" rel="nofollow">logo assets </a></li>
+		<li>Download our <a href="https://www.binance.com/assetsForDownload.html" rel="nofollow">logo assets </a></li>
 		<li>Want to write about binereum? <a href="mailto:press@binereum.org">Press inquiries</a>
 		</li>
 		<li>Russian version <a href="/ru">Switch Language </a>
