--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 				<li class="first leaf"><a href="#start" title="">Register</a></li>
 				<li class="leaf"><a href="#fees" title="">Fees</a></li>
 				<li class="leaf"><a href="#about" title="">About</a></li>
-				<li class="last leaf"><a href="#FAQ" title="">Download</a></li>
+				<li class="last leaf"><a href="#download" title="">Download</a></li>
 			</ul>
 		</div>  
 	</nav>
@@ -321,7 +321,12 @@ Binance is a popular cryptocurrency exchange which was started in China but rece
 	</div>
 </section>	
 
-	
+<section class="bin-advantage">
+<div class="bin-title"><a id="download">Download</a></div>
+<div class="bin-vi3">	
+	</div>
+	</div>
+</section>	
 <!--
 <section class="bin-faq">
 <div class="bin-title"><a id="FAQ">FAQ</a></div>
