--- a/index.html
+++ b/index.html
@@ -362,7 +362,7 @@ Binance is a popular cryptocurrency exchange which was started in China but rece
     </div>
     <div class="review-content__body" v-pre="">
         <h2 class="review-content__title">
-                <a class="link link--large link--dark" href="/reviews/5cc99948a8436908c4118000" data-track-link="{'target': 'Single review', 'name': 'review-title'}">fast growing exchange with wide range…</a>
+                <p>fast growing exchange with wide range…</p>
         </h2>
         <p class="review-content__text">
             fast growing exchange with wide range of services
