--- a/index.html
+++ b/index.html
@@ -330,7 +330,7 @@ Binance is a popular cryptocurrency exchange which was started in China but rece
 <article class="review" id="5cc99948a8436908c4118000" data-reviewmid="5cc99948a8436908c4118000" data-review-domain-name="binance.com" data-review-domain-id="59d5e2bd0000ff0005acd963" data-review-user-id="5cc9974b19370159e7e33ea7" data-review-is-reported="false">
 
         <aside class="review__consumer-information">
-            
+            <div class="consumer-information__picture">
 
     <div class="consumer-information__details">
         <div class="consumer-information__name" v-pre="">
@@ -341,6 +341,7 @@ Binance is a popular cryptocurrency exchange which was started in China but rece
                 <span>4 reviews</span>
             </div>
                     </div>
+    </div>
     </div>
 
         </aside>
