--- a/index.html
+++ b/index.html
@@ -380,7 +380,9 @@ Binance is a popular cryptocurrency exchange which was started in China but rece
 	</div>
 </section>	
 
-
+<section class="bin-faq">
+	<div class="bin-vi2">	
+	<div class="bin-vi3">
 <div class="comment-section">
 	<h1 class="comment-reply-title">Write your comment!</h1>
 	<form id="commentform" class="comment-form">
@@ -411,7 +413,9 @@ Binance is a popular cryptocurrency exchange which was started in China but rece
 </div>
 
 
-
+	</div>
+	</div>
+</section>	
 
 <!--
 <section class="bin-faq">
