--- a/index.html
+++ b/index.html
@@ -327,7 +327,9 @@ Binance is a popular cryptocurrency exchange which was started in China but rece
 
 <div class="review-card">
         
+<article class="review" id="5cc99948a8436908c4118000" data-reviewmid="5cc99948a8436908c4118000" data-review-domain-name="binance.com" data-review-domain-id="59d5e2bd0000ff0005acd963" data-review-user-id="5cc9974b19370159e7e33ea7" data-review-is-reported="false">
 
+        <aside class="review__consumer-information">
            
 	 <div class="consumer-information__picture">    </div>
     <div class="consumer-information__details">
@@ -340,6 +342,7 @@ Binance is a popular cryptocurrency exchange which was started in China but rece
     </div>
 
 
+        </aside>
 <section class="review__content">
 	<div class="review-content">
 		<div class="review-content-header">
@@ -355,7 +358,7 @@ Binance is a popular cryptocurrency exchange which was started in China but rece
 	</div>
 </section>
 
-
+</article>
     </div>
 
 	</div>
