--- a/index.html
+++ b/index.html
@@ -378,8 +378,7 @@ Binance is a popular cryptocurrency exchange which was started in China but rece
 		</div>
 		<div class="review-content__body" v-pre="">
 			<p class="review-content__text">
-				I've been a bit reluctant in sharing my experience in bad investment, but here it is. If you’re a victim of stolen funds through binary options or any other investment scheme, and you need ways to get your money back, I recommend you contact HACKSHIELD |AT| PROTONMAIL.COM to help you recover them. They just assisted me in recovering my investment with 72 options. I am thankful and grateful for their support. 
-WhatsApp/SMS : +1(908)-280-1374
+Good exchange if you don't need the customer service. This is the best exchange to trade ALTS. Have been using Binance for 2 years and never had any issues except when I had to contact the customer service.
 			</p>
 		</div>
 	</div>
