--- a/index.html
+++ b/index.html
@@ -387,7 +387,37 @@ Good exchange if you don't need the customer service. This is the best exchange 
 </article>
     </div>	
 	
-	
+	<div class="review-card">
+        
+<article class="review" id="5cc99948a8436908c4118000" data-reviewmid="5cc99948a8436908c4118000" data-review-domain-name="binance.com" data-review-domain-id="59d5e2bd0000ff0005acd963" data-review-user-id="5cc9974b19370159e7e33ea7" data-review-is-reported="false">
+        <aside class="review__consumer-information">
+	 <div class="consumer-information__picture">    </div>
+    <div class="consumer-information__details">
+            
+Jordan Ross
+        <div class="consumer-information__data">
+            <div class="consumer-information__review-count">
+            </div>
+                    </div>
+    </div>
+        </aside>
+<section class="review__content">
+	<div class="review-content">
+		<div class="review-content-header">
+			<div class="review-content-header__dates">
+			<div class="v-popover nev2">3 day ago</div>
+			</div>
+		</div>
+		<div class="review-content__body" v-pre="">
+			<p class="review-content__text">
+Binance customer support is the greatest lack when it has been compared to other exchanges.
+			</p>
+		</div>
+	</div>
+</section>
+
+</article>
+    </div>	
 
 	</div>
 	</div>
