--- a/index.html
+++ b/index.html
@@ -65,7 +65,10 @@
 			</h1>
 			<p class="bin-fast"><span class="bin-yel">Lowest </span>Transaction Fees <span class="bin-yel"> 0.05%</span></p> 
 			<p class="bin-fast"><span class="bin-yel">Begin </span>Make Money <span class="bin-yel"> Today!</span></p> 	   
-			<div class="bin-button"><i class="far fa-arrow-alt-circle-down"></i><a href="https://www.binance.com/?ref=26861559" target="_blank" rel="no-follow">Register Now</a>
+			<div class="bin-button">
+			
+			<a href="https://www.binance.com/?ref=26861559" target="_blank" rel="no-follow">Register Now</a>
+			<i class="far fa-arrow-alt-circle-down"></i>
 			</div>
 			</div>
 		</div>
