--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 			<div class="bin-button">
 			
 			<a href="https://www.binance.com/?ref=26861559" target="_blank" rel="no-follow">Register Now</a>
-			<i class="far fa-arrow-alt-circle-down"></i>
+			<i class="fas fa-sign-in-alt"></i>
 			</div>
 			</div>
 		</div>
