--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@ Using BNB for transaction fees applies a discount to your trading fee. By defaul
 -->
 
 <section class="bin-down">
-<div class="bin-title whitez1"><a id="download">Getting Started With binereum Mining</a></div>
+<div class="bin-title whitez1"><a id="download">Open a Binance Account</a></div>
 <div class="bin-download">
 	<div class="bin-flex">	
 		<div class="bin-ver">	
