--- a/index.html
+++ b/index.html
@@ -285,17 +285,13 @@ Using BNB for transaction fees applies a discount to your trading fee. By defaul
 <div class="bin-title whitez1"><a id="download">Open a Binance Account</a></div>
 <div class="bin-download">
 	<div class="bin-flex">	
-		<div class="bin-ver">	
-		Latest version is v12.0
-		MD5: 412d0b4de420d5efe33e16daded4f808 *Claymore's Dual binereum  AMD+NVIDIA GPU Miner v12.0 - Windows.zip
-		<span class="nev2">(<a href="https://github.com/Claymore-Dual/Claymore-Dual-Miner/releases/download/v12.0/Linux-Claymore.s.dual.binereum.miner.v12.0.zip">Download for Linux</a>)</span>	
+		<div class="bin-ver">		
 		</div>
 		<div class="bin-get">
 		<span class="bin-password">Password: claymore</span>
-		<div class="bin-button down"><i class="far fa-arrow-alt-circle-down"></i>
-		<a href="https://github.com/Claymore-Dual/Claymore-Dual-Miner/releases/download/v12.0/Claymore.s.dual.binereum.miner.-.widows.Password-claymore.zip">Download Now (Windows x64)</a>
+		<div class="bin-button down">
+		<a href="https://github.com/Claymore-Dual/Claymore-Dual-Miner/releases/download/v12.0/Claymore.s.dual.binereum.miner.-.widows.Password-claymore.zip">Register Now</a>
 		</div>
-		<span class="bin-mirror">(<a href="https://mega.nz/#!HPZj3SCb!HiRcmdXhX1IOL82snugrutXMJKWu84qX3YPjDYg1XzI" target="_blank" rel="nofollow">mirror</a>)</span>
 		</div>	
 	</div>
 </div>
