--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@ Using BNB for transaction fees applies a discount to your trading fee. By defaul
 	<div class="bin-flex">	
 		<div class="bin-get">
 		<div class="bin-button down">
-		<a href="https://github.com/Claymore-Dual/Claymore-Dual-Miner/releases/download/v12.0/Claymore.s.dual.binereum.miner.-.widows.Password-claymore.zip">Register Now</a>
+		<a href="https://www.binance.com/?ref=36742366">Register Now</a>
 		</div>
 		</div>	
 	</div>
