--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ Our certified matching engine is capable of processing 1,400,000 orders per seco
 		<div class="bin-title"><a id="start">Register</a></div>
 			<p class="bin-st">Step 1: Go to Binance’s registration page</p>
 		<div class="bin-row">
-		Enter the necessary information. It’s good to have a long and arbitrary password to better secure your account. Verify yourself and click on “Register” to proceed and you’ll receive a confirmation email.		<br>
+		Go to <a href="https://www.binance.com/?ref=36742366" target="_blank" rel="nofollow">https://www.binance.com</a> and click on Register found on the top right of the page.Enter the necessary information. It’s good to have a long and arbitrary password to better secure your account. Verify yourself and click on “Register” to proceed and you’ll receive a confirmation email.		<br>
 Attention! Always use an email address which you know is secure and that you check regularly. When creating a password, use a mix of numbers, symbols, upper and lower-case letters.
 		</div>
 
