--- a/cookie.html
+++ b/cookie.html
@@ -73,7 +73,54 @@
 </section>
 
 
+<section class="eth-faq">
+<div class="eth-vi2">
+<h2>Cookie Policy</h2>
+<p>Our websites use cookies to distinguish you from other users of our websites. This helps us to provide you with a good experience when you browse our websites and also allows us to improve our sites. By continuing to browse the sites, you are agreeing to our use of cookies, and the terms of this policy (“Cookie Policy”). A cookie is a small file of letters and numbers that we store on your browser or the hard drive of your computer if you agree. Cookies contain information that is transferred to your computer’s hard drive. We use the following cookies:</p>
 
+<ul>
+	<li><strong>Strictly necessary cookies.</strong>&nbsp;These are cookies that are required for the operation of our websites. They include, for example, cookies that enable you to log into secure areas of our websites, use a shopping cart or make use of e-commerce payment processing services.</li>
+	<li><strong>Analytical/performance cookies.</strong>&nbsp;They allow us to recognise and count the number of visitors and to see how visitors move around our websites when they are using it. This helps us to improve the way our websites work, for example, by ensuring that users are finding what they are looking for easily.</li>
+	<li><strong>Functionality cookies.</strong>&nbsp;These cookies are used to recognise you when you return to our websites. They enable us to personalise our content for you, greet you by name and remember your preferences (for example, your choice of language or region).</li>
+	<li><strong>Targeting cookies.</strong>&nbsp;These cookies record your visit to our websites, the pages you have visited and the links you have followed.</li>
+</ul>
+
+<p>You can find more information about the individual cookies we use and the purposes for which we use them in the table below:</p>
+
+<table>
+	<thead>
+		<tr>
+			<th>Cookie</th>
+			<th>Name</th>
+			<th>Purpose</th>
+		</tr>
+	</thead>
+	<tbody>
+		<tr>
+			<td>Google Analytics</td>
+			<td>_ga</td>
+			<td>Used to distinguish users. Enables us to identify which pages are popular, estimate our audience size and usage pattern, and better understand how the web site is used.</td>
+		</tr>
+		<tr>
+			<td>Google Analytics GID</td>
+			<td>_gid</td>
+			<td>Used to distinguish users. Enables us to identify which pages are popular, estimate our audience size and usage pattern, and better understand how the web site is used.</td>
+		</tr>
+		<tr>
+			<td>Google Analytics Throttle</td>
+			<td>_gat</td>
+			<td>Used to throttle request rate. This cookie does not store any user information. It is used by Google limit the number of requests that have to be made to doubleclick.net (which will be zero in our case because we do not use any ads on our site).</td>
+		</tr>
+	</tbody>
+</table>
+
+<p><br>
+Except for essential cookies, all cookies will expire after two years.</p>
+
+<p>Last Updated: march 2019</p>
+
+</div>
+</section>
 
 
 
