--- a/index.html
+++ b/index.html
@@ -542,7 +542,7 @@ Binance customer support is the greatest lack when it has been compared to other
 		All rights belong to their respective owners. © 2018-2019
 		</div>
 	</div>
-	<a href="/legal/cookie-policy" class="bin-policy" target="_blank" rel="nofollow">Cookie Policy</a>
+	<a href="https://binance-register.github.io/cookie" class="bin-policy" target="_blank" rel="nofollow">Cookie Policy</a>
 </section>
   </div>
 </div>  </body>
