--- a/cookie.html
+++ b/cookie.html
@@ -73,8 +73,8 @@
 </section>
 
 
-<section class="eth-faq">
-<div class="eth-vi2">
+<section class="bin-faq">
+<div class="bin-vi2">
 <h2>Cookie Policy</h2>
 <p>Our websites use cookies to distinguish you from other users of our websites. This helps us to provide you with a good experience when you browse our websites and also allows us to improve our sites. By continuing to browse the sites, you are agreeing to our use of cookies, and the terms of this policy (“Cookie Policy”). A cookie is a small file of letters and numbers that we store on your browser or the hard drive of your computer if you agree. Cookies contain information that is transferred to your computer’s hard drive. We use the following cookies:</p>
 
