--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <meta name="MobileOptimized" content="width" />
 <meta name="HandheldFriendly" content="true" />
 <meta name="apple-mobile-web-app-capable" content="yes" />
-<meta name="description" content="Claymore Dual Miner supports mining binash-based coins (e.g., binereum) with 0.65% of devfee." />
+<meta name="description" content="Open a binance account in easy simple steps. Published : 03 May 2019. To set up and register a Binance account, you need to open the Binance website." />
 
 <link rel="stylesheet" href="/css/bin.css">
 <link rel="stylesheet" href="/css/global.base.css">
