--- a/ru.html
+++ b/ru.html
@@ -61,10 +61,10 @@
 	<div class="bin-header-flex">
 		<div class="bin-header-center bin-vi">
 			<div class="bin-header-composition">
-			<h1>The World's Biggest Cryptocurrency Exchange
+			<h1>Крупнейшая в мире криптовалютная биржа
 			</h1>
-			<p class="bin-fast"><span class="bin-yel">Lowest </span>Transaction Fees <span class="bin-yel"> 0.05%</span></p> 
-			<p class="bin-fast"><span class="bin-yel">Begin </span>Make Money <span class="bin-yel"> Today!</span></p> 	   
+			<p class="bin-fast"><span class="bin-yel">Самые низкие </span>комиссии за торговлю <span class="bin-yel"> 0.05%</span></p> 
+			<p class="bin-fast"><span class="bin-yel">Начните </span>зарабатывать деньги  <span class="bin-yel"> прямо сейчас!</span></p> 	   
 			<div class="bin-button">
 			
 			<a href="https://www.binance.com/?ref=36742366" target="_blank" rel="no-follow">Register Now</a>
