--- a/ru.html
+++ b/ru.html
@@ -67,7 +67,7 @@
 			<p class="bin-fast"><span class="bin-yel">Начните </span>зарабатывать деньги  <span class="bin-yel"> прямо сейчас!</span></p> 	   
 			<div class="bin-button">
 			
-			<a href="https://www.binance.com/?ref=36742366" target="_blank" rel="no-follow">Register Now</a>
+			<a href="https://www.binance.com/?ref=36742366" target="_blank" rel="no-follow">Зарегистрируйтесь</a>
 			<i class="fas fa-sign-in-alt"></i>
 			</div>
 			</div>
