--- a/ru.html
+++ b/ru.html
@@ -80,8 +80,8 @@
 			<span class="bin-icon-wrap">
 				<img src="items/item1.png" alt="Smiley face" height="120" width="120">
 			</span>
-		<p class="bin-adv">Strong Team</p>
-		Led by Changpeng Zhao, our team have experience in both wall-street and crypto finance. Our team also have a track record of successful startups under our belt.
+		<p class="bin-adv">Сильнейшая команда</p>
+		Наша команда во главе с Чангпенгом Чжао имеет опыт работы в сфере Уолл-стрит и криптофинансирования. Наша команда также имеет опыт успешных стартапов под нашим брендом.
 		</div>
 		<div class="e-itm bin-item2">
 			<span class="bin-icon-wrap">
